syntax = "proto3";

package position;

import "models/position/field.proto";
import "models/position/measure.proto";
import "models/position/position.proto";
import "models/position/position_filter.proto";

import "models/util/local_timestamp.proto";
import "requests/util/operation.proto";

option java_multiple_files = true;
option java_package = "common.request";
option java_outer_classname = "QueryPositionRequestProtos";

message QueryPositionRequestProto {
  string object_class = 1;
  string version = 2;

  util.RequestOperationTypeProto operation_type = 10;

  PositionTypeProto position_type = 20;
  PositionViewProto position_view = 21;

  repeated FieldProto fields = 30;
  repeated MeasureProto measures = 31;

  PositionFilterProto filter_fields = 32;
  util.LocalTimestampProto as_of = 33;
}


